Espero q no necesite algo mas :(

--- a/P3/Makefile
+++ b/P3/Makefile
@@ -1,10 +1,16 @@
 all: mi_voz.png mivoz_fft.png
 
-mi_voz.png: alvis.wav
+mi_voz.png: prueba.wav
 	python grafica_mi_voz.py
 
-mivoz_fft.png: alvis.wav
+mivoz_fft.png: prueba.wav
 	python fft_de_mi_voz.py
 
+prueba.wav: a.out
+	./a.out
+
+a.out:
+	cc grabar_mi_nombre.c
+
 clean:
-	rm -f *png
+	rm -f *png prueba.wav *.out
